[build-system]
requires = ["setuptools>=77.0", "wheel", "cffi>=1.10.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name="Randy Lai",email = "randy.cs.lai@gmail.com"}]
name = "rchitect"
dynamic = ["version"]
description = "Mapping R API to Python"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = ['cffi>=1.10.0', 'six>=1.9.0', 'packaging>=23.0']

# Corresponds to extras_require
[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov"]

# Corresponds to url arguments
[project.urls]
Homepage = "https://github.com/randy3k/rchitect"
# Add other URLs like Bug Tracker, Documentation etc.

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests*"] } }

[tool.setuptools.package-data]
rchitect = ["reticulate/*.R", "_cffi/*"]

# Configuration for dynamic version reading
[tool.setuptools.dynamic]
version = {attr = "rchitect.__version__"}
